Realized people that open the site on small mobiles from facebook messenger got a bit squashed layout... Added min-height to certian spaces to ensure pictures show

--- a/styles/common/layout.css
+++ b/styles/common/layout.css
@@ -115,6 +115,31 @@ main section {
   flex-basis: auto;
 }
 
+.basis-50{ /*ubrukt*/
+  min-height: 50px;
+  flex-basis: 50px;
+}
+
+.basis-100{
+  min-height: 100px;
+  flex-basis: 100px;
+}
+
+.basis-150{
+  min-height: 150px;
+  flex-basis: 150px;
+}
+
+.basis-200{/*ubrukt*/
+  min-height: 200px;
+  flex-basis: 200px;
+}
+
+.basis-250{
+  min-height: 250px;
+  flex-basis: 250px;
+}
+
 .flex-column {
   display: flex;
   flex-direction: column;
